Adding initial version of tenant and setup

--- a/StorageSample/AdminExtension/Content/Templates/Menu/StorageSample.Menu.Location.QuickCreate.html
+++ b/StorageSample/AdminExtension/Content/Templates/Menu/StorageSample.Menu.Location.QuickCreate.html
@@ -29,7 +29,7 @@
             <div>
                 <input id="locationNetworkSharePath" name="locationNetworkSharePath" type="text" data-val="true"
                        data-val-required="Please provide shared file server path"
-                       data-val-regex="The file share is either not in the correct format or has special characters"
+                       data-val-regex="The container is either not in the correct format or has special characters"
                        data-val-regex-pattern="^\\(\\[^\s\\\/:*?<>|&quot;]+)+(\\)?$"
                        data-val-length="The field must be a string between 3 and 128 characters"
                        data-val-length-max="128"
