--- a/StorageSample/AdminExtension/Content/Templates/Tabs/QuickStartTabContent.html
+++ b/StorageSample/AdminExtension/Content/Templates/Tabs/QuickStartTabContent.html
@@ -2,7 +2,7 @@
     <img class="quickstart-graphic" src="{{attr:quickStartImage}}" alt="Quick Start" />
     <div class="description">
         <h2>Terawe Starter Kit Sample for WAP</h2>
-        <div class="headersubtext">Finish the following steps to complete your storage sample setup</div>
+        <div class="headersubtext">Finish the following steps to complete setup</div>
         <div class="quickstartCheckboxContainer">
             <span class="quickstartCheckbox"></span>
             <span class="quickstartCheckboxText">Skip Quick Start the next time visit</span>
