Moving location and container implementation to follow provider model

--- a/StorageSample/TenantExtension/Content/Templates/Menu/ContainerQuickCreate.html
+++ b/StorageSample/TenantExtension/Content/Templates/Menu/ContainerQuickCreate.html
@@ -2,7 +2,13 @@
     <div class="drawer-form-item">
         <label for="hw-qc-server-name">Location</label>
         <select id="hw-qc-share-server" name="selectedLocation" data-fxcontroltype="fxDropdown" data-val="true"
-                data-val-required="Please provide location name"></select>
+                data-val-required="Please choose location name"></select>
+    </div>
+
+    <div class="drawer-form-item">
+        <label for="hw-qc-server-name">Subscription</label>
+        <select id="hw-qc-container-subscription" name="selectedSubscription" data-fxcontroltype="fxDropdown" data-val="true"
+                data-val-required="Please choose subscription name"></select>
     </div>
 
     <div class="drawer-form-item">
