Adding delete function for container

--- a/StorageSample/TenantExtension/Content/Templates/ContainersTabEmpty.html
+++ b/StorageSample/TenantExtension/Content/Templates/ContainersTabEmpty.html
@@ -1,11 +1,11 @@
-﻿<div class="hw-empty">
-    <div class="hw-empty-header">
-        <p>You have not yet created a container. Go ahead and create one to get started.</p>
+﻿<div class="hs-empty">
+    <div class="hs-empty-header">
+        <p>You currently have no containers. Go ahead and create one to get started.</p>
     </div>
 
-    <div class="hw-empty-sections publishing-options clearfix">
+    <div class="hs-empty-sections publishing-options clearfix">
         <div class="hs-empty-listview">
-            <a href="#" class="arrowlink-right dm-new-domain-link">Add a new container</a>
+            <a href="#Workspaces/StorageSampleTenantExtension/containers" class="arrowlink-right new-container-link">Add a new container</a>
         </div>
     </div>
 </div>
