--- a/StorageSample/TenantExtension/Content/Templates/FileUploadWizard.html
+++ b/StorageSample/TenantExtension/Content/Templates/FileUploadWizard.html
@@ -1,4 +1,4 @@
-﻿<div class="fileUploadContainer">
+﻿<div class="fileUploadFolder">
     <p class="fileUploadHeader">UPLOAD IMAGE FILE</p>
     <div>
         <!--This form needed for the upload to work.-->
@@ -10,8 +10,8 @@
                        data-val-regex-pattern="^.+\.png$" />
             </div>
             <div class="aux-dialog-item">
-                <label for="containerId">Container ID</label>
-                <input id="containerId" name="containerId" type="text" value="{{attr:data.containerId}}" readonly />
+                <label for="folderId">Folder ID</label>
+                <input id="folderId" name="folderId" type="text" value="{{attr:data.folderId}}" readonly />
             </div>
             <div class="aux-dialog-item">
                 <label for="subscriptionId">Subscription ID</label>
