--- a/StorageSample/TenantExtension/Content/Templates/StorageFilesTab.html
+++ b/StorageSample/TenantExtension/Content/Templates/StorageFilesTab.html
@@ -1,4 +1,4 @@
 ﻿<div class="dm-main">
-    <div class="gridContainer"></div>
+    <div class="gridFolder"></div>
     <div id="hs-empty" class="hs-environment"></div>
 </div>
