--- a/StorageSample/TenantExtension/Content/Templates/StorageFilesTabEmpty.html
+++ b/StorageSample/TenantExtension/Content/Templates/StorageFilesTabEmpty.html
@@ -1,11 +1,11 @@
 ﻿<div class="hs-empty">
     <div class="hs-empty-header">
-        <p>You currently have no files in this container.</p>
+        <p>You currently have no files in this folder.</p>
     </div>
 
     <div class="hs-empty-sections publishing-options clearfix">
         <div class="hs-empty-listview">
-            <!--<a href="#Workspaces/StorageSampleTenantExtension/containers" class="arrowlink-right new-container-link">Add a new container</a>-->
+            <!--<a href="#Workspaces/StorageSampleTenantExtension/folders" class="arrowlink-right new-folder-link">Add a new folder</a>-->
         </div>
     </div>
 </div>
